--- a/bundles/service.coldfusion/pom.xml
+++ b/bundles/service.coldfusion/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.apiserver.service</groupId>
     <artifactId>coldfusion</artifactId>
-    <packaging>bundle</packaging>
+    <packaging>war</packaging>
     <name>service.ColdFusion Bundle</name>
     <version>1.0</version>
     <url>http://www.springframework.org/osgi</url>
@@ -36,11 +36,17 @@
             <scope>provided</scope>
         </dependency>
 
+
 		<dependency>
-			<groupId>library.service</groupId>
-			<artifactId>interfaces</artifactId>
-			<version>1.0</version>
-			<scope>provided</scope>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
+			<version>4.3.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.framework</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 
 		<dependency>
@@ -104,11 +110,6 @@
             <version>${slf4j.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
-            <version>4.3.0</version>
-        </dependency>
 
         <!-- test scoped dependencies
         <dependency>
@@ -228,6 +229,8 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
+				<version>2.3.5</version>
                 <executions>
                     <execution>
                         <id>bundle-manifest</id>
@@ -240,28 +243,30 @@
                             <instructions>
                               <Bundle-SymbolicName>service.ColdFusion</Bundle-SymbolicName>
                               <Bundle-Classpath>.,WEB-INF/classes,WEB-INF/lib/*.jar,WEB-INF/cfusion/lib/*.jar</Bundle-Classpath>
+							  <Bundle-Activator>activator.BundleContextListener</Bundle-Activator>
 
-
-                              <Export-Package>com.apiserver.service.coldfusion.*</Export-Package>
+                              <Export-Package>*</Export-Package>
                               <Import-Package>
                                    javax.servlet
                                   ,javax.servlet.http
                                   ,javax.servlet.resources
-								  ,libraries.service.interfaces
+								  ,javax.servlet.ServletContextListener
                               </Import-Package>
 
 
                                <!--DynamicImport-Package>javax.*, org.xml.sax, org.xml.sax.*, org.w3c.*</DynamicImport-Package-->
 
 
-                              <!--Embed-Dependency>*;scope=compile|runtime</Embed-Dependency-->
+                              <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
                               <!--Embed-Transitive>true</Embed-Transitive-->
 
-                              <!--Fragment-Host>org.springframework.bundle.osgi.web.extender</Fragment-Host-->
+                              <Fragment-Host>org.springframework.bundle.osgi.web.extender</Fragment-Host>
 
                               <Web-ContextPath>cfusion</Web-ContextPath>
                               <Webapp-Context>cfusion</Webapp-Context>
+
                             </instructions>
+
                         </configuration>
 
                     </execution>
@@ -270,9 +275,11 @@
                     <supportedProjectTypes>
                         <supportedProjectType>jar</supportedProjectType>
                         <supportedProjectType>bundle</supportedProjectType>
+                        <supportedProjectType>osgi-bundle</supportedProjectType>
                         <supportedProjectType>war</supportedProjectType>
                     </supportedProjectTypes>
                     <instructions></instructions>
+
                 </configuration>
             </plugin>
 
@@ -282,9 +289,9 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
                 <configuration>
-                    <!--archive>
-                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-                    </archive-->
+                    <archive>
+                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>sky
+                    </archive>
                     <webResources>
                         <resource>
                             <directory>${extracted.cfusion.war}</directory>
@@ -292,6 +299,7 @@
                                 <include>**</include>
                             </includes>
                             <excludes>
+                                <exlude>**/MANIFEST.MF</exlude>
                                 <exlude>**/web.xml</exlude>
                             </excludes>
                         </resource>
