--- a/bundles/api.status/pom.xml
+++ b/bundles/api.status/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.apiserver.api</groupId>
 	<artifactId>status</artifactId>
-	<packaging>bundle</packaging>
+	<packaging>war</packaging>
 	<version>0.1.0</version>
 	<name>api.status Bundle</name>
 	<url>http://maven.apache.org</url>
@@ -11,6 +11,10 @@
 	<properties>
 		<spring.version>3.1.0.RELEASE</spring.version>
 		<org.codehaus.jackson.version>1.7.0</org.codehaus.jackson.version>
+		<spring.maven.artifact.version>2.5.1</spring.maven.artifact.version>
+		<spring.osgi.version>1.0.2</spring.osgi.version>
+		<equinox.ver>3.2.2</equinox.ver>
+		<slf4j.version>1.4.3</slf4j.version>
 	</properties>
 
 	<dependencies>
@@ -90,6 +94,7 @@
 
 
 		<!-- for compile only, your container will provide this  -->
+		<!--
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
@@ -170,6 +175,113 @@
 			<artifactId>org.osgi.core</artifactId>
 			<version>1.4.0</version>
 		</dependency>
+	    -->
+
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.maven.artifact.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.maven.artifact.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${spring.maven.artifact.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl104-over-slf4j</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
+			<version>4.0</version>
+		</dependency>
+
+		<!-- test scoped dependencies -->
+		<dependency>
+			<groupId>org.springframework.osgi</groupId>
+			<artifactId>junit.osgi</artifactId>
+			<version>3.8.2-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.maven.artifact.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.osgi</groupId>
+			<artifactId>spring-osgi-test</artifactId>
+			<version>${spring.osgi.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.osgi</groupId>
+			<artifactId>spring-osgi-annotation</artifactId>
+			<version>${spring.osgi.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.osgi</groupId>
+			<artifactId>aopalliance.osgi</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Equinox OSGi platform -->
+		<dependency>
+			<groupId>org.eclipse.osgi</groupId>
+			<artifactId>org.eclipse.osgi</artifactId>
+			<version>${equinox.ver}</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.osgi</groupId>
+			<artifactId>log4j.osgi</artifactId>
+			<version>1.2.15-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+
+
 
 	</dependencies>
 
@@ -204,7 +316,7 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>1.0.0</version>
+				<version>2.3.5</version>
 				<extensions>true</extensions>
 				<executions>
 					<execution>
@@ -218,23 +330,24 @@
 								<Bundle-SymbolicName>${pom.groupId}.${pom.artifactId}</Bundle-SymbolicName>
 								<Bundle-Name>${pom.artifactId}</Bundle-Name>
 								<Bundle-Version>0.1.0</Bundle-Version>
+								<Bundle-Classpath>.,WEB-INF/classes,WEB-INF/lib/*.jar</Bundle-Classpath>
 
 								<Export-Package>*</Export-Package>
 								<Import-Package>
 									javax.servlet
 									,javax.servlet.http
 									,javax.servlet.resources
-									,library.service.interfaces
 									,org.apache.catalina,org.apache.catalina.connector
 								</Import-Package>
 
-								<!--DynamicImport-Package>javax.*, org.xml.sax, org.xml.sax.*, org.w3c.*</DynamicImport-Package-->
+								<DynamicImport-Package>javax.*, org.xml.sax, org.xml.sax.*, org.w3c.*</DynamicImport-Package>
 
 
-								<!--Embed-Dependency>*;scope=compile|runtime</Embed-Dependency-->
+								<Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
 								<!--Embed-Transitive>true</Embed-Transitive-->
 
 								<!--Fragment-Host>org.springframework.bundle.osgi.web.extender</Fragment-Host-->
+								<Fragment-Host>org.springframework.osgi.catalina.start.osgi</Fragment-Host>
 
 								<Web-ContextPath>api-status</Web-ContextPath>
 								<Webapp-Context>api-status</Webapp-Context>
@@ -258,6 +371,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
+				<configuration>
+					<archive>
+						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>sky
+					</archive>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
