--- a/bundles/service.coldfusion/pom.xml
+++ b/bundles/service.coldfusion/pom.xml
@@ -53,7 +53,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
-			<scope>provided</scope>
+			<!--scope>provided</scope-->
 		</dependency>
 
         <dependency>
@@ -242,25 +242,20 @@
                         <configuration>
                             <instructions>
                               <Bundle-SymbolicName>service.ColdFusion</Bundle-SymbolicName>
-                              <Bundle-Classpath>.,WEB-INF/classes,WEB-INF/lib/*.jar,WEB-INF/cfusion/lib/*.jar</Bundle-Classpath>
+                              <Bundle-Classpath>WEB-INF/classes,WEB-INF/lib,WEB-INF/cfusion/lib</Bundle-Classpath>
 							  <Bundle-Activator>activator.BundleContextListener</Bundle-Activator>
 
-                              <Export-Package>*</Export-Package>
-                              <Import-Package>
-                                   javax.servlet
-                                  ,javax.servlet.http
-                                  ,javax.servlet.resources
-								  ,javax.servlet.ServletContextListener
-                              </Import-Package>
+                              <Export-Package>coldfusion,coldfusion.runtime</Export-Package>
+                              <Import-Package>org.osgi.framework;version="1.3.0",javax.servlet;version="2.5"</Import-Package>
 
 
                                <!--DynamicImport-Package>javax.*, org.xml.sax, org.xml.sax.*, org.w3c.*</DynamicImport-Package-->
 
 
                               <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
-                              <!--Embed-Transitive>true</Embed-Transitive-->
+                              <Embed-Transitive>true</Embed-Transitive>
 
-                              <Fragment-Host>org.springframework.bundle.osgi.web.extender</Fragment-Host>
+                              <!--Fragment-Host>org.springframework.bundle.osgi.web.extender</Fragment-Host-->
 
                               <Web-ContextPath>cfusion</Web-ContextPath>
                               <Webapp-Context>cfusion</Webapp-Context>
