--- a/bundles/api.status/src/main/webapp/WEB-INF/web.xml
+++ b/bundles/api.status/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 
 	<context-param>
 		<param-name>contextClass</param-name>
-		<param-value>org.springframework.osgi.web.context.support.OsgiBundleXmlWebApplicationContext</param-value>
+		<param-value>org.eclipse.virgo.web.dm.ServerOsgiBundleXmlWebApplicationContext</param-value>
 	</context-param>
 
 	<listener>
