--- a/bundles/service.coldfusion/pom.xml
+++ b/bundles/service.coldfusion/pom.xml
@@ -244,8 +244,9 @@
                               <Bundle-SymbolicName>service.ColdFusion</Bundle-SymbolicName>
                               <Bundle-Classpath>WEB-INF/classes,WEB-INF/lib,WEB-INF/cfusion/lib</Bundle-Classpath>
 							  <Bundle-Activator>activator.BundleContextListener</Bundle-Activator>
+							  <SpringSource-SystemPackages>import</SpringSource-SystemPackages>
 
-                              <Export-Package>coldfusion,coldfusion.runtime</Export-Package>
+							  <Export-Package>coldfusion,coldfusion.runtime</Export-Package>
                               <Import-Package>org.osgi.framework;version="1.3.0",javax.servlet;version="2.5"</Import-Package>
 
 
