--- a/apiserver-core/pom.xml
+++ b/apiserver-core/pom.xml
@@ -104,6 +104,12 @@
 			<version>1.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+
 
 		<!--
 		   Caching Libraries
