--- a/apiserver-core/pom.xml
+++ b/apiserver-core/pom.xml
@@ -142,11 +142,12 @@
 			<version>1.2.2</version>
 		</dependency>
 
-		<dependency>
+		<!--dependency>
 			<groupId>com.mangofactory</groupId>
 			<artifactId>swagger-springmvc</artifactId>
 			<version>0.2.2</version>
-		</dependency>
+		</dependency-->
+
 		<dependency>
 			<groupId>com.wordnik</groupId>
 			<artifactId>swagger-core_2.9.1</artifactId>
@@ -562,13 +563,13 @@
 
 
 
-			<!--plugin>
+			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
-			</plugin-->
+			</plugin>
 
 			<!--plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
