--- a/apiserver-core/pom.xml
+++ b/apiserver-core/pom.xml
@@ -149,6 +149,22 @@
 
 
 
+
+		<!--
+		 Dependencies for IMAGE Metadata
+		-->
+		<dependency>
+			<groupId>com.drewnoakes</groupId>
+			<artifactId>metadata-extractor</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+		<!--dependency>
+			<groupId>org.apache.sanselan</groupId>
+			<artifactId>sanselan</artifactId>
+			<version>0.97-incubator</version>
+		</dependency-->
+
+
 		<!--
 		 Dependencies for SWAGGER code
 		-->
@@ -581,6 +597,8 @@
 							</includes>
 							<excludes>
 								<exlude>**/web.xml</exlude>
+								<!-- we are already including a newer version in the dependencys above -->
+								<exlude>**/cfusion/lib/metadata-extractor-*.jar</exlude>
 							</excludes>
 						</resource>
 					</webResources>
