--- a/apiserver-core/pom.xml
+++ b/apiserver-core/pom.xml
@@ -34,8 +34,13 @@
 		<dependency>
 			<groupId>com.adobe</groupId>
 			<artifactId>ColdFusion</artifactId>
-			<version>10</version>
 			<scope>provided</scope>
+			<version>10</version>
+
+			<!-- alternative (have not tested)
+			   <scope>system</scope>
+        		<systemPath>${project.basedir}/...../cfusion.jar</systemPath>
+			-->
 		</dependency>
 
 		<dependency>
@@ -139,6 +144,13 @@
 			<version>1.2.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-parent</artifactId>
+			<version>26</version>
+		</dependency>
+
+
 		<!--dependency>
 			<groupId>com.mangofactory</groupId>
 			<artifactId>swagger-springmvc</artifactId>
@@ -158,11 +170,13 @@
 			<artifactId>metadata-extractor</artifactId>
 			<version>2.6.2</version>
 		</dependency>
-		<!--dependency>
-			<groupId>org.apache.sanselan</groupId>
-			<artifactId>sanselan</artifactId>
-			<version>0.97-incubator</version>
-		</dependency-->
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-imaging</artifactId>
+			<version>1.1-SNAPSHOT</version>
+		</dependency>
+
 
 
 		<!--
@@ -529,7 +543,11 @@
 			<name>Spring Framework Maven Snapshot Repository</name>
 			<url>http://maven.springframework.org/snapshot</url>
 		</repository>
-
+		<repository>
+			<id>apache.snapshots</id>
+			<name>Apache Development Snapshot Repository</name>
+			<url>https://repository.apache.org/snapshots</url>
+		</repository>
 
 
 	</repositories>
