--- a/apiserver-core/src/main/webapp/WEB-INF/web.xml
+++ b/apiserver-core/src/main/webapp/WEB-INF/web.xml
@@ -52,6 +52,19 @@
 		</param-value>
 	</context-param>
 
+
+	<filter>
+		<filter-name>CORSFilter</filter-name>
+		<filter-class>apiserver.core.filters.CORSFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>CORSFilter</filter-name>
+		<url-pattern>/rest/*</url-pattern>
+	</filter-mapping>
+
+
+
+
 	<filter>
 		<filter-name>charEncodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -71,47 +84,47 @@
 
 
 	<!-- CF Monitoring Filter  -->
-	<filter>
+	<!--filter>
 		<filter-name>CFMonitoringFilter</filter-name>
 		<filter-class>coldfusion.bootstrap.BootstrapFilter</filter-class>
 		<init-param>
 			<param-name>filter.class</param-name>
 			<param-value>coldfusion.monitor.event.MonitoringServletFilter</param-value>
 		</init-param>
-	</filter>
+	</filter-->
 
 	<!-- Cache Filter for cfform swfs -->
-	<filter>
+	<!--filter>
 		<filter-name>CFCacheFilter</filter-name>
 		<filter-class>coldfusion.bootstrap.BootstrapFilter</filter-class>
 		<init-param>
 			<param-name>filter.class</param-name>
 			<param-value>flex.server.j2ee.cache.CacheFilter</param-value>
 		</init-param>
-	</filter>
+	</filter-->
 
 	<!-- Request Control Filter for Flash Remoting servlets-->
-	<filter>
+	<!--filter>
 		<filter-name>FlashRemotingControlFilter</filter-name>
 		<filter-class>coldfusion.bootstrap.BootstrapFilter</filter-class>
 		<init-param>
 			<param-name>filter.class</param-name>
 			<param-value>coldfusion.filter.FlashRequestControlFilter</param-value>
 		</init-param>
-	</filter>
+	</filter-->
 
 	<!-- WSRP portlet Filter for wsrp producer -->
-	<filter>
+	<!--filter>
 		<filter-name>WSRPFilter</filter-name>
 		<filter-class>coldfusion.bootstrap.BootstrapFilter</filter-class>
 		<init-param>
 			<param-name>filter.class</param-name>
 			<param-value>coldfusion.portlet.wsrp.ProviderImpl</param-value>
 		</init-param>
-	</filter>
+	</filter-->
 
 	<!-- CF ClickJacking deny protection Filter  -->
-	<filter>
+	<!--filter>
 		<filter-name>CFClickJackFilterDeny</filter-name>
 		<filter-class>coldfusion.bootstrap.BootstrapFilter</filter-class>
 		<init-param>
@@ -122,10 +135,10 @@
 			<param-name>mode</param-name>
 			<param-value>DENY</param-value>
 		</init-param>
-	</filter>
+	</filter-->
 
 	<!-- CF ClickJacking same origiin protection Filter  -->
-	<filter>
+	<!--filter>
 		<filter-name>CFClickJackFilterSameOrigin</filter-name>
 		<filter-class>coldfusion.bootstrap.BootstrapFilter</filter-class>
 		<init-param>
@@ -136,14 +149,14 @@
 			<param-name>mode</param-name>
 			<param-value>SAMEORIGIN</param-value>
 		</init-param>
-	</filter>
+	</filter-->
 
 	<!-- CF ClickJacking Filter mapppings starts. For ColdFusion Administrator we are allowing sameorigiin frames. Use Deny or some other mode of this filter as appropriate for the application and add required url pattern
 	-->
-	<filter-mapping>
+	<!--filter-mapping>
 		<filter-name>CFClickJackFilterSameOrigin</filter-name>
 		<url-pattern>/CFIDE/administrator/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping-->
 	<!-- End CF ClickJacking Filter mappings -->
 
 	<!-- CF Monitoring Filter mappings
@@ -153,7 +166,7 @@
 	 included here. This is because Flex appears to batch invocations
 	 for methods invoked close to one another, resulting in the filter
 	 being missed for all batched invocations other than the first.
-	-->
+
 	<filter-mapping>
 		<filter-name>CFMonitoringFilter</filter-name>
 		<servlet-name>FlashGateway</servlet-name>
@@ -169,10 +182,10 @@
 	<filter-mapping>
 		<filter-name>CFMonitoringFilter</filter-name>
 		<servlet-name>CFCServlet</servlet-name>
-	</filter-mapping>
+	</filter-mapping> -->
 	<!-- End CF Monitoring Filter mappings -->
 
-	<!-- Request Control Filter for Flash Remoting servlets -->
+	<!-- Request Control Filter for Flash Remoting servlets
 	<filter-mapping>
 		<filter-name>FlashRemotingControlFilter</filter-name>
 		<servlet-name>MessageBrokerServlet</servlet-name>
@@ -181,20 +194,20 @@
 	<filter-mapping>
 		<filter-name>FlashRemotingControlFilter</filter-name>
 		<servlet-name>FlashGateway</servlet-name>
-	</filter-mapping>
+	</filter-mapping>        -->
 	<!-- end request control filters -->
 
 	<!-- Cache Filter for cfform swfs -->
-	<filter-mapping>
+	<!--filter-mapping>
 		<filter-name>CFCacheFilter</filter-name>
 		<servlet-name>CFSwfServlet</servlet-name>
-	</filter-mapping>
+	</filter-mapping-->
 
 	<!-- WSRP portlet Filter for wsrp producer -->
-	<filter-mapping>
+	<!--filter-mapping>
 		<filter-name>WSRPFilter</filter-name>
 		<servlet-name>WSRPProducer</servlet-name>
-	</filter-mapping>
+	</filter-mapping-->
 
 
 	<listener>
@@ -207,7 +220,7 @@
 	</listener>
 
 	<!-- Message Broker Servlet, wrapped in a ColdFusion specific class -->
-	<servlet>
+	<!--servlet>
 		<servlet-name>MessageBrokerServlet</servlet-name>
 		<servlet-class>coldfusion.bootstrap.BootstrapServlet</servlet-class>
 		<init-param>
@@ -219,7 +232,7 @@
 			<param-value>/WEB-INF/flex/services-config.xml</param-value>
 		</init-param>
 		<load-on-startup>11</load-on-startup>
-	</servlet>
+	</servlet-->
 
 	<!-- start flex2
 	<servlet>
@@ -254,6 +267,7 @@
 	end flex2 -->
 
 	<!-- start flash forms settings -->
+	<!--
 	<servlet>
 		<servlet-name>CFInternalServlet</servlet-name>
 		<servlet-class>coldfusion.bootstrap.BootstrapServlet</servlet-class>
@@ -296,6 +310,7 @@
 			<param-value>flex.server.j2ee.ForbiddenServlet</param-value>
 		</init-param>
 	</servlet>
+	-->
 	<!-- end flash forms settings -->
 
 	<servlet id="coldfusion_servlet_1">
@@ -317,6 +332,8 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+
+	<!--
 	<servlet id="coldfusion_servlet_11">
 		<servlet-name>FlashGateway</servlet-name>
 		<display-name>Flash Gateway</display-name>
@@ -391,7 +408,7 @@
 		</init-param>
 		<load-on-startup>12</load-on-startup>
 	</servlet>
-
+	-->
 
 	<servlet id="coldfusion_servlet_3">
 		<servlet-name>CfmServlet</servlet-name>
@@ -404,6 +421,8 @@
 		</init-param>
 		<load-on-startup>4</load-on-startup>
 	</servlet>
+
+	<!--
 	<servlet id="coldfusion_servlet_4">
 		<servlet-name>GraphServlet</servlet-name>
 		<display-name>GraphServlet</display-name>
@@ -414,6 +433,7 @@
 			<param-value>coldfusion.graph.GraphServlet</param-value>
 		</init-param>
 	</servlet>
+	-->
 	<servlet id="coldfusion_servlet_5">
 		<servlet-name>CFCServlet</servlet-name>
 		<display-name>CFC Processor</display-name>
@@ -443,7 +463,7 @@
 		<load-on-startup>1001</load-on-startup>
 	</servlet>
 
-	<!-- begin REST -->
+	<!-- begin REST
 	<servlet id="coldfusion_servlet_6">
 		<servlet-name>CFRestServlet</servlet-name>
 		<display-name>Rest Processor</display-name>
@@ -463,10 +483,11 @@
 		</init-param>
 		<load-on-startup>11</load-on-startup>
 	</servlet>
+	 -->
 	<!-- end REST -->
 
 	<!-- begin RDS -->
-	<servlet id="coldfusion_servlet_8789">
+	<!--servlet id="coldfusion_servlet_8789">
 		<servlet-name>RDSServlet</servlet-name>
 		<display-name>RDS Servlet</display-name>
 		<servlet-class>coldfusion.bootstrap.BootstrapServlet</servlet-class>
@@ -474,8 +495,9 @@
 			<param-name>servlet.class</param-name>
 			<param-value>coldfusion.rds.RdsFrontEndServlet</param-value>
 		</init-param>
-	</servlet>
+	</servlet-->
 	<!-- end RDS -->
+
 
 	<servlet>
 		<servlet-name>CFFileServlet</servlet-name>
@@ -488,7 +510,7 @@
 	</servlet>
 
 
-	<!-- WSRP producer servlet.. -->
+	<!-- WSRP producer servlet..
 	<servlet>
 		<servlet-name>WSRPProducer</servlet-name>
 		<servlet-class>coldfusion.bootstrap.BootstrapServlet</servlet-class>
@@ -497,7 +519,7 @@
 			<param-value>org.apache.axis.transport.http.AxisServlet</param-value>
 		</init-param>
 		<load-on-startup>101</load-on-startup>
-	</servlet>
+	</servlet>    -->
 
 
 	<!-- ###########################
@@ -521,7 +543,7 @@
 
 	<servlet-mapping>
 		<servlet-name>api-status</servlet-name>
-		<url-pattern>/v1-0/*</url-pattern>
+		<url-pattern>/rest/v1/*</url-pattern>
 	</servlet-mapping>
 
 
@@ -530,11 +552,11 @@
 	########################### -->
 
 
-	<!-- Flash Remoting/Flex mapping -->
+	<!-- Flash Remoting/Flex mapping
 	<servlet-mapping id="coldfusion_mapping_0">
 		<servlet-name>MessageBrokerServlet</servlet-name>
 		<url-pattern>/flex2gateway/*</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping> -->
 
 	<!-- start flex2
 	<servlet-mapping>
@@ -546,7 +568,7 @@
 		<url-pattern>/flex-internal/*</url-pattern>
 	</servlet-mapping>
 	end flex2 -->
-
+	<!--
 	<servlet-mapping id="coldfusion_mapping_1">
 		<servlet-name>FlashGateway</servlet-name>
 		<url-pattern>/flashservices/gateway/*</url-pattern>
@@ -555,6 +577,7 @@
 		<servlet-name>GraphServlet</servlet-name>
 		<url-pattern>/CFIDE/GraphData</url-pattern>
 	</servlet-mapping>
+	-->
 	<servlet-mapping id="coldfusion_mapping_3">
 		<servlet-name>CfmServlet</servlet-name>
 		<url-pattern>*.cfm</url-pattern>
@@ -586,42 +609,51 @@
 	 <url-pattern>*.cfc/*</url-pattern>
    </servlet-mapping>
    end SES -->
-	<!-- begin RDS -->
-	<servlet-mapping id="coldfusion_mapping_9">
-		<servlet-name>RDSServlet</servlet-name>
-		<url-pattern>/CFIDE/main/ide.cfm</url-pattern>
-	</servlet-mapping>
+
 	<!-- end RDS -->
 	<servlet-mapping id="coldfusion_mapping_10">
 		<servlet-name>CFCServlet</servlet-name>
 		<url-pattern>*.jws</url-pattern>
 	</servlet-mapping>
+	<!-- begin RDS -->
+	<!--
+	<servlet-mapping id="coldfusion_mapping_9">
+		<servlet-name>RDSServlet</servlet-name>
+		<url-pattern>/CFIDE/main/ide.cfm</url-pattern>
+	</servlet-mapping>
 	<servlet-mapping id="coldfusion_mapping_11">
 		<servlet-name>GraphServlet</servlet-name>
 		<url-pattern>/CFIDE/GraphData.cfm</url-pattern>
 	</servlet-mapping>
+	-->
+
 	<servlet-mapping id="coldfusion_mapping_12">
 		<servlet-name>CFCServlet</servlet-name>
 		<url-pattern>*.cfr</url-pattern>
 	</servlet-mapping>
+
+	<!--
 	<servlet-mapping id="coldfusion_mapping_13">
 		<servlet-name>CFFormGateway</servlet-name>
 		<url-pattern>/CFFormGateway/*</url-pattern>
 	</servlet-mapping>
+	-->
 	<servlet-mapping id="coldfusion_mapping_14">
 		<servlet-name>CFFileServlet</servlet-name>
 		<url-pattern>/CFFileServlet/*</url-pattern>
 	</servlet-mapping>
+	<!--
 	<servlet-mapping id="coldfusion_mapping_15">
 		<servlet-name>CFRestServlet</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
+
 	<servlet-mapping>
 		<servlet-name>CFForbiddenServlet</servlet-name>
 		<url-pattern>*.hbmxml</url-pattern>
 	</servlet-mapping>
-
-	<!-- start flash form settings -->
+	-->
+	<!-- start flash form settings
 	<servlet-mapping>
 		<servlet-name>CFInternalServlet</servlet-name>
 		<url-pattern>/cfform-internal/*</url-pattern>
@@ -644,20 +676,22 @@
 		<servlet-name>CFForbiddenServlet</servlet-name>
 		<url-pattern>*.swc</url-pattern>
 	</servlet-mapping>
+	-->
 	<!-- end flash form settings -->
 
-	<!--  WSRP producer servlet mapping.. -->
+	<!--  WSRP producer servlet mapping..
 	<servlet-mapping>
 		<servlet-name>WSRPProducer</servlet-name>
 		<url-pattern>/WSRPProducer/*</url-pattern>
 	</servlet-mapping>
-
+	 -->
 
 	<session-config>
 		<session-timeout>30</session-timeout>
 	</session-config>
 
 	<welcome-file-list id="WelcomeFileList_1034013110672">
+		<welcome-file>index.jsp</welcome-file>
 		<welcome-file>index.cfm</welcome-file>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
