--- a/apiserver-core/pom.xml
+++ b/apiserver-core/pom.xml
@@ -144,18 +144,12 @@
 			<version>1.2.2</version>
 		</dependency>
 
+
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-parent</artifactId>
-			<version>26</version>
-		</dependency>
-
-
-		<!--dependency>
 			<groupId>com.mangofactory</groupId>
 			<artifactId>swagger-springmvc</artifactId>
 			<version>0.2.2</version>
-		</dependency-->
+		</dependency>
 
 
 
@@ -165,16 +159,23 @@
 		<!--
 		 Dependencies for IMAGE Metadata
 		-->
+		<!--
+		<dependency>
+			<groupId>com.sun.media</groupId>
+			<artifactId>jai_imageio</artifactId>
+			<version>1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.media</groupId>
+			<artifactId>jai-core</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+		-->
 		<dependency>
 			<groupId>com.drewnoakes</groupId>
 			<artifactId>metadata-extractor</artifactId>
 			<version>2.6.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-imaging</artifactId>
-			<version>1.1-SNAPSHOT</version>
 		</dependency>
 
 
@@ -547,7 +548,6 @@
 			<name>Apache Development Snapshot Repository</name>
 			<url>https://repository.apache.org/snapshots</url>
 		</repository>
-
 	</repositories>
 
 
