--- a/apiserver-core/src/main/resources/log4j.properties
+++ b/apiserver-core/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
-log4j.rootLogger=WARN, stdout
-#log4j.logger.org.springframework=WARN
+log4j.rootLogger=INFO, stdout
+log4j.logger.org.apache.jackrabbit=WARN
 #log4j.logger.org.hibernate.SQL=Warn           #Log all SQL DML statements as they are executed
 #log4j.logger.org.hibernate.type=DEBUG          #Log all JDBC parameters
 #log4j.logger.org.hibernate.tool.hbm2ddl=DEBUG  #Log all SQL DDL statements as they are executed
@@ -14,7 +14,7 @@ log4j.rootLogger=WARN, stdout
 # Used only for development.
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} [%t] %-5p (%F:%L) Ð %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} [%t] %-5p (%F:%L) : %m%n
 
 
 #log4j.appender.fileLogger=org.apache.log4j.RollingFileAppender
@@ -24,7 +24,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} [%t] %-5p (%F:%L) Ð %
 # Keep 10 backup files
 #log4j.appender.fileLogger.MaxBackupIndex=5
 #log4j.appender.fileLogger.layout=org.apache.log4j.PatternLayout
-#log4j.appender.fileLogger.layout.ConversionPattern=%d{ISO8601} [%t] %-5p (%F:%L) Ð %m%n
+#log4j.appender.fileLogger.layout.ConversionPattern=%d{ISO8601} [%t] %-5p (%F:%L) ï¿½ %m%n
 
 #intellij Plugin
 #log4j.appender.intellij=org.apache.log4j.net.SocketAppender
