create a seperate apiserver-coldfusion project for the connector configuration and remove the embedded cfusion.war from apiserver-core

--- a/apiserver-core/src/main/webapp/WEB-INF/web.xml
+++ b/apiserver-core/src/main/webapp/WEB-INF/web.xml
@@ -54,7 +54,7 @@
 
     <servlet>
         <servlet-name>PingServlet</servlet-name>
-        <servlet-class>apiserver.apis.v1_0.servlets.PingServlet</servlet-class>
+        <servlet-class>apiserver.core.servlets.PingServlet</servlet-class>
     </servlet>
 
 
