--- a/apiserver-core/pom.xml
+++ b/apiserver-core/pom.xml
@@ -4,8 +4,8 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.mikenimer.server</groupId>
-	<artifactId>ApiServer</artifactId>
+	<groupId>com.mikenimer.apiserver</groupId>
+	<artifactId>ApiServer-core</artifactId>
 	<name>ApiServer</name>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
@@ -19,9 +19,9 @@
 		<spring-integration.version>2.1.0.RELEASE</spring-integration.version>
         <jackrabbit.version>2.6.0</jackrabbit.version>
 
-		<!-- path to extracted war file -->
+		<!-- path to extracted war file
 		<cfusion.war>../resources/ColdFusion10/cfusion.war</cfusion.war>
-		<extracted.cfusion.war>../resources/ColdFusion10/cfusion</extracted.cfusion.war>
+		<extracted.cfusion.war>../resources/ColdFusion10/cfusion</extracted.cfusion.war> -->
 	</properties>
 
 
@@ -37,18 +37,18 @@
             Local project repo jars
             @see https://devcenter.heroku.com/articles/local-maven-dependencies#create-a-local-maven-repository-directory
          -->
-        <dependency>
+        <!--dependency>
             <groupId>com.mikenimer</groupId>
             <artifactId>Palladium</artifactId>
             <version>1.0.75</version>
-        </dependency>
+        </dependency-->
 
-		<dependency>
+		<!--dependency>
 			<groupId>com.adobe</groupId>
 			<artifactId>ColdFusion</artifactId>
 			<scope>provided</scope>
 			<version>10</version>
-        </dependency>
+        </dependency-->
 
 		<dependency>
 			<groupId>com.adobe.xmp</groupId>
@@ -75,7 +75,7 @@
         <!--dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>3.0.0</version>
+            <version>2.5</version>
             <scope>provided</scope>
         </dependency-->
         <dependency>
@@ -84,6 +84,11 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
+        <!--dependency>
+            <groupId>org.glassfish.extras</groupId>
+            <artifactId>glassfish-embedded-all</artifactId>
+            <version>3.1</version>
+        </dependency-->
 
 
         <!-- XML -->
@@ -129,11 +134,18 @@
 
         <!-- HTTP -->
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.2.4</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.2.1</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -146,6 +158,7 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>commons-codec</groupId>
@@ -191,6 +204,7 @@
 			<artifactId>swagger-springmvc</artifactId>
 			<version>0.6.0-SNAPSHOT</version>
 		</dependency>
+
 
 
         <!-- Jetty -->
@@ -290,18 +304,23 @@
 
 		<!--
 		 Dependencies for SWAGGER code
-		-->
-		<dependency>
-			<groupId>com.wordnik</groupId>
-			<artifactId>swagger-core_2.9.1</artifactId>
-			<version>1.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.wordnik</groupId>
-			<artifactId>swagger-annotations_2.9.1</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-		<dependency>
+        -->
+        <dependency>
+            <groupId>com.wordnik</groupId>
+            <artifactId>swagger-core_2.9.1</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.wordnik</groupId>
+            <artifactId>swagger-annotations_2.9.1</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.wordnik</groupId>
+            <artifactId>swagger-jaxrs_2.9.1</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+        <dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>0.10.8</version>
@@ -320,12 +339,6 @@
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
 			<version>2.9.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.9.0-rc1</version>
-			<scope>test</scope>
 		</dependency>
 
 		<!--
@@ -610,31 +623,45 @@
 		<!--
 		TEST DEPENDENCIES
 	 	-->
-		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-core</artifactId>
-			<version>7.0.26</version>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.servlet</artifactId>
+            <version>3.0</version>
+            <scope>test</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>org.eclipse.jdt.core.compiler</groupId>
-			<artifactId>ecj</artifactId>
-			<version>3.7.1</version>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>7.0.26</version>
+            <scope>test</scope>
+        </dependency>
 
-		<dependency>
+        <dependency>
+            <groupId>org.eclipse.jdt.core.compiler</groupId>
+            <artifactId>ecj</artifactId>
+            <version>3.7.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit-dep</artifactId>
 			<version>4.9</version>
 			<scope>test</scope>
 		</dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.0-rc1</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
 
 
-	</dependencies>
 
 
 	<repositories>
@@ -679,6 +706,18 @@
             <url>file:${project.basedir}/repo</url>
         </repository>
 	</repositories>
+
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>swagger-maven-plugin-mvn-repo</id>
+            <url>https://github.com/kongchen/swagger-maven-plugin/raw/mvn-repo/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
 
 	<!-- see http://felix.apache.org/site/maven-bundle-plugin-bnd.html for more info -->
@@ -822,30 +861,36 @@
 
             <!--
                https://github.com/kongchen/swagger-maven-plugin
-
+            -->
             <plugin>
                 <groupId>com.github.kongchen</groupId>
                 <artifactId>swagger-maven-plugin</artifactId>
                 <version>1.0-SNAPSHOT</version>
                 <configuration>
                     <apiSources>
-                        //can speficy multi sources here to get multi format outputs
+                        <!--can specify multi sources here to get multi format outputs-->
                         <apiSource>
                             <apiClasses>
-                                <apiClass>com.foo.bar.ApiResource1Version1</apiClass>
-                                <apiClass>com.foo.bar.ApiResource2Version1</apiClass>
+                                <apiClass>apiserver.apis.v1_0.status.controllers.StatusController</apiClass>
+                                <apiClass>apiserver.apis.v1_0.images.controllers.CaptchaController</apiClass>
+                                <apiClass>apiserver.apis.v1_0.images.controllers.ImageCacheController</apiClass>
+                                <apiClass>apiserver.apis.v1_0.images.controllers.ImageDrawingController</apiClass>
+                                <apiClass>apiserver.apis.v1_0.images.controllers.ImageFiltersController</apiClass>
+                                <apiClass>apiserver.apis.v1_0.images.controllers.ImageInfoController</apiClass>
+                                <apiClass>apiserver.apis.v1_0.images.controllers.ImageManipulationController</apiClass>
+                                <apiClass>apiserver.apis.v1_0.images.controllers.ImageMetadataController</apiClass>
                             </apiClasses>
-                            <apiPackage>com.foo.bar.api</apiPackage>
+                            <apiPackage>apiserver.apis.v1_0.status.controllers</apiPackage>
                             <apiVersion>v1</apiVersion>
-                            <basePath>http://host:port/foo/bar</basePath>
-                            <outputTemplate>markdown.mustache</outputTemplate>
-                            <outputPath>doc.md</outputPath>
+                            <basePath>http://localhost:9000/doc/api</basePath>
+                            <outputTemplate>html.mustache</outputTemplate>
+                            <outputPath>src/main/webapp/docs/doc.html</outputPath>
                         </apiSource>
                     </apiSources>
                 </configuration>
                 <executions>
                     <execution>
-                        <phase>package</phase>
+                        <phase>compile</phase>
                         <goals>
                             <goal>generate</goal>
                         </goals>
@@ -853,7 +898,6 @@
                 </executions>
             </plugin>
 
-        -->
 
 			<!--plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -902,6 +946,7 @@
 			</plugin>
 			 -->
 		</plugins>
+
 	</build>
 
 </project>
